crates/rome_js_formatter/tests/specs/prettier/js/non-strict/keywords.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
assertion_line: 119
expression: keywords.js

---
# Input
```js
var package = require('../package');

/**
 * My amazing comment
 */
function myFunction() {
	return 'StringGainz';
}

```

# Output
```js
var package = require("../package");

/**
 * My amazing comment
 */
function myFunction() {
  return "StringGainz";
}

```

# Errors
```
error[SyntaxError]: Illegal use of reserved keyword `package` as an identifier in strict mode
  ┌─ keywords.js:1:5
  │
1 │ var package = require('../package');
  │     ^^^^^^^


```


